--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
                             largest share of  29%, of which 77% is due to land transportation</a>. Multiple efforts, therefore, have been taken to <a href="https://www.epa.gov/greenvehicles/routes-lower-greenhouse-gas-emissions-transportation-future">
                             reduce transportation-related emission levels</a>. The development of autonomous vehicles and the transformation of cities with modern technology 
                             have created a significant opportunity to enable roadways, driving patterns, and behaviors that are not just environmentally friendly but also safer and efficient. 
-                            Project <i>AlphaDrive</i> is designed to harness these rich opportunities in tackling transportation-related climate challenges. 
+                            Project <i>GreenWave</i> is designed to harness these rich opportunities in tackling transportation-related climate challenges. 
                         </p>
 
                         <p class="big">
-                            In <i>AlphaDrive</i>, we are interested in building an ecosystem of tools, datasets, and methods for enabling roadway interventions and impact assessments in tackling 
+                            In <i>GreenWave</i>, we are interested in building an ecosystem of tools, datasets, and methods for enabling roadway interventions and impact assessments in tackling 
                             transportation-related climate change. Our core goals include, 
                             
                             <ul class="big">
