--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>AlphaDrive</title>
+    <title>GreenWave</title>
 
     <meta name="author" content="Vindula Jayawardana">
-    <meta name="description" content="Vindula Jayawardana's personal academic profile"/>
-    <meta name="keywords" content="vindula,jayawardana,research,personal,student,msc,graduate,uom,cornel"/>
+    <meta name="description" content="Website of the project GreenWave"/>
+    <meta name="keywords" content="eco-driving,climate,climate-change,cathy wu,cathy,wu,vindula,jayawardana,research,greenwave,reinforcement learning,machine learning"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
