--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Greenwave</title>
 
-    <meta name="author" content="Vindula Jayawardana">
-    <meta name="description" content="Vindula Jayawardana's personal academic profile"/>
-    <meta name="keywords" content="vindula,jayawardana,research,personal,student,msc,graduate,uom,cornel"/>
+    <meta name="author" content="MIT Wu Lab">
+    <meta name="description" content="Ai-driven Eco-driving for Tackling Climate Change"/>
+    <meta name="keywords" content="greenwave, eco-driving, autonomous, vehicles, emission, climate"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
