--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                         <p class="big">
                             Project Greenwave is designed to harness these rich opportunities to move the needle in tackling climate change. In Greenwave, we are building an ecosystem of tools, datasets, 
-                            and methods for enabling roadway interventions and impact assessments to transportation-related sustainability challenges. Our core goals include,
+                            and methods for enabling roadway interventions and impact assessments to transportation-related sustainability challenges. 
                         </p>
                     </td>
                 </tr>
