--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                         </p>
 
                         <p class="big">
-                            Project Greenwave is designed to harness these rich opportunities to move the needle in tackling climate change. In Greenwave, we are building an ecosystem of tools, datasets, 
-                            and methods for enabling roadway interventions and impact assessments to transportation-related sustainability challenges. 
+			    Project Greenwave leverages deep reinforcement learning to inform transportation decarbonization by mitigating carbon intensity of urban driving.
+                            In Greenwave, we are building an ecosystem of tools, datasets, and methods for enabling roadway interventions and impact assessments of strategies to reduce carbon intensity of urban driving.
                         </p>
                     </td>
                 </tr>
